education line on dark mode fixed

--- a/src/app/components/education/education.component.scss
+++ b/src/app/components/education/education.component.scss
@@ -20,7 +20,7 @@
       background-color: #ebebeb;
       margin-left: 10px;
       margin-right: 20px;
-      height: 120%;
+      height: 107%;
       /* Altezza di default, che può essere modificata se la classe `full-height` è presente */
 
       .point-on-line {
